...
    <string name="show_hidden_items">Show hidden items</string>
    <string name="hide_hidden_items">Hide hidden items</string>

    <string name="action_select">Select</string>
    <string name="action_select_all">Select all</string>
    <string name="action_unselect_all">Unselect all</string>
    <string name="action_rename">Rename</string>
    <string name="action_share">Share</string>
    <string name="action_open">Open</string>
    <string name="action_open_with">Open with</string>
    <string name="action_compress">Compress</string>
    <string name="action_uncompress">Uncompress</string>
    <string name="action_move_to">Move to</string>
    <string name="action_copy_to">Copy to</string>
    <string name="action_delete">Delete</string>
    <string name="action_info">Info</string>
    <string name="action_open_folder">Open folder</string>
    <string name="action_remove_from_recents">Remove from recents</string>
    <string name="action_add_to_favorites">Add to favorites</string>
    <string name="action_remove_from_favorites">Remove from favorites</string>
    <string name="recent_file_not_found">File no longer exists</string>
    <string name="action_create_folder">New folder</string>
...
